--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <h3 class="typing-text">I'm a <span id="typing"></span></h3>
             <p>I'm a tech support professional with a growing passion for cybersecurity — a field that fascinates me for its blend of disciplines like networking, IoT, scripting, and even social engineering. What truly sparked my interest? Those thrilling hacking scenes in movies that hinted at the power and mystery behind the screen. Cybersecurity, to me, isn't just a job — it's an evolving puzzle that touches every corner of tech.</p>
             <div class="social-icons">
+                <a href="https://www.instagram.com/nyam0si/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://github.com/nyamosi-tech" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://x.com/__cornman" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
             </div>
@@ -205,3 +206,4 @@ typingEffect();
 
 </body>
 </html>
+
