--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="https://x.com/__cornman" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
             </div>
             <!-- Removed duplicate download attribute -->
-            <a href="nyamosi_resume.pdf" download class="btn" target="_blank">Download Resume</a>
+            <a href="opera_resume.pdf" download class="btn" target="_blank">Download Resume</a>
         </div>
     </section>
 
@@ -206,4 +206,5 @@ typingEffect();
 
 </body>
 </html>
+
 
