--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="social-icons">
                 <a href="https://www.instagram.com/nyam0si/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://github.com/nyamosi-tech" target="_blank"><i class="fa-brands fa-github"></i></a>
-                <a href="https://x.com/__cornman" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://x.com/SirCumf3rence" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
             </div>
             <!-- Removed duplicate download attribute -->
             <a href="opera_resume.pdf" download class="btn" target="_blank">Download Resume</a>
@@ -206,5 +206,6 @@ typingEffect();
 
 </body>
 </html>
+
 
 
